--- a/Ella_Model/Ella.html
+++ b/Ella_Model/Ella.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logobox">
-            Ella Model.
+            Ella Model
         </div>
         <div class="navbox">
             <a id="homie" href="#">Home</a>
